manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: files-zoomoid-de
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production-dns01
spec:
  ingressClassName: traefik
  rules:
    - host: files.zoomoid.de
      http:
        paths:
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: worker
                port:
                  number: 80
          - pathType: Prefix
            path: "/static"
            backend:
              service:
                name: worker
                port:
                  number: 80
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ui
                port:
                  number: 80
  tls:
    - hosts:
        - files.zoomoid.de
      secretName: files-zoomoid-de-tls
